--- a/cms-content/src/test/resources/com/condation/cms/content/markdown/features.shortcodes.html
+++ b/cms-content/src/test/resources/com/condation/cms/content/markdown/features.shortcodes.html
@@ -20,9 +20,9 @@
   #L%
 -->
 <div>
-    <h1>task list test</h1>
+    <h1 id="task-list-test">task list test</h1>
     <p>a paragraph with [[link id="google" title="Google"]][[/link]]</p>
 	
-	<h1>next</h1>
+	<h1 id="next">next</h1>
     <p>[[link id="apache" title="Apache"]][[/link]]</p>
 </div>
