--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -76,5 +76,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
 		<script src="/manager/js/menu.js"></script>
+		
+		<div id="modalContainer"></div>
+		<div id="sidebarContainer"></div>
 	</body>
 </html>
