--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -28,6 +28,9 @@
 		<link href="/manager/boostrap/bootstrap.min.css" rel="stylesheet" />
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+
+		<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+
 	</head>
 	<body>
 		<div id="menu">
@@ -41,27 +44,27 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							{% for entry in menuFactory.createMenu().entries() %}
-								{% if entry != null && entry.hasChildren() %}
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-									   aria-expanded="false">
-										{{ entry.name }}
-									</a>
-									<ul class="dropdown-menu">
-										{% for child in entry.getChildren() %}
-											{% if child.isDivider() %}
-												<li><hr class="dropdown-divider"></li>
-											{% else %}
-											<li><a class="dropdown-item" href="#" data-action-definition='{{ child.getActionDefinition() }}'>{{ child.name }}</a></li>
-											{% endif %}
-										{% endfor %}
-									</ul>
-								</li>
-								{% else %}
-								<li class="nav-item">
-									<a class="nav-link" aria-current="page" href="#" data-action-definition='{{ child.getActionDefinition() }}'>{{ entry.name }}</a>
-								</li>
-								{% endif %}
+							{% if entry != null && entry.hasChildren() %}
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+								   aria-expanded="false">
+									{{ entry.name }}
+								</a>
+								<ul class="dropdown-menu">
+									{% for child in entry.getChildren() %}
+									{% if child.isDivider() %}
+									<li><hr class="dropdown-divider"></li>
+									{% else %}
+									<li><a class="dropdown-item" href="#" data-action-definition='{{ child.getActionDefinition() }}'>{{ child.name }}</a></li>
+									{% endif %}
+									{% endfor %}
+								</ul>
+							</li>
+							{% else %}
+							<li class="nav-item">
+								<a class="nav-link" aria-current="page" href="#" data-action-definition='{{ child.getActionDefinition() }}'>{{ entry.name }}</a>
+							</li>
+							{% endif %}
 							{% endfor %}
 						</ul>
 					</div>
@@ -76,8 +79,60 @@
 		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
 		<script src="/manager/js/menu.js"></script>
-		
+
 		<div id="modalContainer"></div>
 		<div id="sidebarContainer"></div>
-	</body>
+
+	<ninja-keys> </ninja-keys>
+
+	<script>
+const ninja = document.querySelector('ninja-keys');
+ninja.data = [
+{
+	id: 'Projects',
+	title: 'Open Projects',
+	hotkey: 'ctrl+N',
+	icon: 'apps',
+	section: 'Projects',
+	handler: () => {
+		// it's auto register above hotkey with this handler
+		alert('Your logic to handle');
+	},
+},
+{
+	id: 'Theme',
+	title: 'Change theme...',
+	icon: 'desktop_windows',
+	children: ['Light Theme', 'Dark Theme', 'System Theme'],
+	hotkey: 'ctrl+T',
+	handler: () => {
+		// open menu if closed. Because you can open directly that menu from it's hotkey
+		ninja.open({parent: 'Theme'});
+		// if menu opened that prevent it from closing on select that action, no need if you don't have child actions
+		return {keepOpen: true};
+	},
+},
+{
+	id: 'Light Theme',
+	title: 'Change theme to Light',
+	icon: 'light_mode',
+	parent: 'Theme',
+	handler: () => {
+		// simple handler
+		document.documentElement.classList.remove('dark');
+	},
+},
+{
+	id: 'Dark Theme',
+	title: 'Change theme to Dark',
+	icon: 'dark_mode',
+	parent: 'Theme',
+	handler: () => {
+		// simple handler
+		document.documentElement.classList.add('dark');
+	},
+},
+];
+	</script>
+</body>
 </html>
