exclude bootstrap files from license maven plugin, update license header

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -2,7 +2,7 @@
   #%L
   ui-module
   %%
-  Copyright (C) 2023 Marx-Software
+  Copyright (C) 2023 - 2025 CondationCMS
   %%
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as
@@ -18,14 +18,14 @@
   License along with this program.  If not, see
   <http://www.gnu.org/licenses/gpl-3.0.html>.
   #L%
--->
+  -->
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Manager</title>
-		<link href="/manager/boostrap/bootstrap.min.css" rel="stylesheet" />
+		<link href="/manager/bootstrap/bootstrap.min.css" rel="stylesheet" />
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
@@ -75,7 +75,7 @@
 			<iframe src="/?preview=true" style="position: absolute; height: 100%; border: none" ></iframe>
 		</div>
 
-		<script src="/manager/boostrap/bootstrap.bundle.min.js"></script>
+		<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
 		<script src="/manager/js/menu.js"></script>
