add example for command getContentNode

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -72,7 +72,7 @@
 			</nav>
 		</div>
 		<div id="content">
-			<iframe src="/?preview=true" style="position: absolute; height: 100%; border: none" ></iframe>
+			<iframe id="contentPreview" src="/?preview=true" style="position: absolute; height: 100%; border: none" ></iframe>
 		</div>
 
 		<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
