--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -82,6 +82,7 @@
 
 		<div id="modalContainer"></div>
 		<div id="sidebarContainer"></div>
+		<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 	<ninja-keys> </ninja-keys>
 
