--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -56,7 +56,7 @@
 
 		<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
 		<link rel="stylesheet" href="/manager/css/manager.css" />
-		<script type="text/javascript" src="/manager/js/manager.js"></script>
+		<script src="/manager/js/manager.js" type="module"></script>
 	</head>
 	<body>
 		<div id="menu">
