change order of sections

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -78,7 +78,7 @@
 			</nav>
 		</div>
 		<div id="content">
-			<iframe id="contentPreview" src="/?preview=true" style="position: absolute; height: 100%; border: none" ></iframe>
+			<iframe id="contentPreview" src="/?preview=true" style="position: absolute; height: 100%; width: 100%; border: none" ></iframe>
 		</div>
 
 		<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
