--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -23,7 +23,7 @@
 {% if entry != null && entry.hasChildren() %}
 <li class="nav-item dropdown">
 	<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-	   aria-expanded="false">
+	   aria-expanded="false" data-cms-i18n-key="{{ entry.id }}">
 		{{ entry.name }}
 	</a>
 	<ul class="dropdown-menu submenu">
@@ -33,14 +33,14 @@
 			{% elseif child.hasChildren() %}
 				{{ menuEntry(child) | raw }}
 			{% else %}
-			<li><a class="dropdown-item" href="#" data-action-definition='{{ child.getActionDefinition() }}'>{{ child.name }}</a></li>
+			<li><a class="dropdown-item" href="#" data-cms-action-definition='{{ child.getActionDefinition() }}' data-cms-i18n-key="{{ child.id }}">{{ child.name }}</a></li>
 			{% endif %}
 		{% endfor %}
 	</ul>
 </li>
 {% else %}
 <li class="nav-item">
-	<a class="nav-link" aria-current="page" href="#" data-action-definition='{{ entry.getActionDefinition() }}'>{{ entry.name }}</a>
+	<a class="nav-link" aria-current="page" href="#" data-cms-action-definition='{{ entry.getActionDefinition() }}' data-cms-i18n-key="{{ child.id }}">{{ entry.name }}</a>
 </li>
 {% endif %}
 {% endmacro %}
@@ -50,7 +50,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Manager</title>
-		<link href="/manager/bootstrap/bootstrap.min.css" rel="stylesheet" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 
@@ -73,6 +73,22 @@
 								{{ menuEntry(entry) | raw }}
 							{% endfor %}
 						</ul>
+						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+								aria-expanded="false" data-cms-i18n-key="language">
+									Language
+								</a>
+								<ul class="dropdown-menu">
+									<li>
+										<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="en" data-cms-i18n-key="language.en">English</a>
+									</li>
+									<li>
+										<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="de" data-cms-i18n-key="language.de">German</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</nav>
@@ -81,10 +97,10 @@
 			<iframe id="contentPreview" src="/?preview=true" style="position: absolute; height: 100%; width: 100%; border: none" ></iframe>
 		</div>
 
-		<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
-		<script src="/manager/js/ui-actions.js"></script>
+		<script src="/manager/js/ui-actions.js" type="module"></script>
 
 		<div id="modalContainer"></div>
 		<div id="sidebarContainer"></div>
