--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -59,6 +59,11 @@
 		<link rel="stylesheet" href="/manager/css/manager.css" />
 		<script src="/manager/js/manager-globals.js"></script>
 		<script src="/manager/js/manager.js" type="module"></script>
+		<style>
+			html, body, #content {
+				height: 100%;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="menu">
@@ -95,8 +100,19 @@
 				</div>
 			</nav>
 		</div>
-		<div id="content">
-			<iframe id="contentPreview" src="/?preview=true" style="position: absolute; height: 100%; width: 100%; border: none" ></iframe>
+		<div id="content" class="w-100 h-100">
+			<div class="position-relative w-100 h-100" id="previewWrapper">
+				<iframe id="contentPreview" class="w-100 h-100 border-0 position-absolute" src="/?preview=true" stylebla="position: absolute; height: 100%; width: 100%; border: none" ></iframe>
+
+				  <!-- Overlay -->
+				<div id="previewOverlay"
+					class="position-absolute top-0 start-0 w-100 h-100 bg-white bg-opacity-75 align-items-center justify-content-center"
+					style="z-index: 10; display: none;">
+					<div class="spinner-border text-primary" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
