fix login and logout

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -96,6 +96,19 @@
 								</ul>
 							</li>
 						</ul>
+						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+								aria-expanded="false" data-cms-i18n-key="menu.settings">
+									Settings
+								</a>
+								<ul class="dropdown-menu">
+									<li>
+										<a class="dropdown-item" id="cms-action-logout" href="/manager/logout" data-cms-i18n-lang="en" data-cms-i18n-key="menu.settings.logout">Logout</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</nav>
