--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -22,61 +22,62 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Manager</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Manager</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 
-	<style>
-		html,
-		body {
-			height: 100%;
-		}
+		<style>
+			html,
+			body {
+				height: 100%;
+			}
 
-		.form-signin {
-			max-width: 330px;
-			padding: 1rem;
-		}
+			.form-signin {
+				max-width: 330px;
+				padding: 1rem;
+			}
 
-		.form-signin .form-floating:focus-within {
-			z-index: 2;
-		}
+			.form-signin .form-floating:focus-within {
+				z-index: 2;
+			}
 
-		.form-signin input[type="email"] {
-			margin-bottom: -1px;
-			border-bottom-right-radius: 0;
-			border-bottom-left-radius: 0;
-		}
+			.form-signin input[type="email"] {
+				margin-bottom: -1px;
+				border-bottom-right-radius: 0;
+				border-bottom-left-radius: 0;
+			}
 
-		.form-signin input[type="password"] {
-			margin-bottom: 10px;
-			border-top-left-radius: 0;
-			border-top-right-radius: 0;
-		}
-	</style>
+			.form-signin input[type="password"] {
+				margin-bottom: 10px;
+				border-top-left-radius: 0;
+				border-top-right-radius: 0;
+			}
+		</style>
 
-</head>
+	</head>
 
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-	<main class="form-signin w-100 m-auto">
-		<form action="/manager/login"> <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-			<h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-			<div class="form-floating"> <input type="email" class="form-control" id="floatingInput"
-					placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-			<div class="form-floating"> <input type="password" class="form-control" id="floatingPassword"
-					placeholder="Password"> <label for="floatingPassword">Password</label> </div>
-			<div class="form-check text-start my-3"> <input class="form-check-input" type="checkbox" value="remember-me"
-					id="checkDefault"> <label class="form-check-label" for="checkDefault">
-					Remember me
-				</label> </div> <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-			<p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2025</p>
-		</form>
-	</main>
+	<body class="d-flex align-items-center py-4 bg-body-tertiary">
+		<main class="form-signin w-100 m-auto">
+			<form action="/manager/login"> <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+				<h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+				<div class="form-floating"> 
+					<input type="text" class="form-control" id="inputUsername" placeholder="username" name="username" /> 
+					<label for="inputUsername">Username</label>
+				</div>
+				<div class="form-floating"> 
+					<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" />
+					<label for="inputPassword">Password</label> 
+				</div>
+				<button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+				<p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2025</p>
+			</form>
+		</main>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+	</body>
 
 </html>
