handle roles when build menu

--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -44,7 +44,7 @@
 				z-index: 2;
 			}
 
-			.form-signin input[type="email"] {
+			.form-signin input[type="text"] {
 				margin-bottom: -1px;
 				border-bottom-right-radius: 0;
 				border-bottom-left-radius: 0;
@@ -61,7 +61,7 @@
 
 	<body class="d-flex align-items-center py-4 bg-body-tertiary">
 		<main class="form-signin w-100 m-auto">
-			<form action="/manager/login"> <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+			<form action="/manager/login.action" method="POST" > <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
 				<h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 				<div class="form-floating"> 
 					<input type="text" class="form-control" id="inputUsername" placeholder="username" name="username" /> 
