--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -22,146 +22,159 @@
 {% macro menuEntry(entry) %}
 {% if entry != null && entry.hasChildren() %}
 <li class="nav-item dropdown">
-	<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-	   aria-expanded="false" data-cms-i18n-key="{{ entry.id }}">
+	<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+		data-cms-i18n-key="{{ entry.id }}">
 		{{ entry.name }}
 	</a>
 	<ul class="dropdown-menu">
 		{% for child in entry.getChildren() %}
-			{% if child.isDivider() %}
-			<li><hr class="dropdown-divider"></li>
-			{% elseif child.hasChildren() %}
-				{{ menuEntry(child) | raw }}
-			{% else %}
-			<li><a class="dropdown-item" href="#" data-cms-action-definition='{{ child.getActionDefinition() }}' data-cms-i18n-key="{{ child.id }}">{{ child.name }}</a></li>
-			{% endif %}
+		{% if child.isDivider() %}
+		<li>
+			<hr class="dropdown-divider">
+		</li>
+		{% elseif child.hasChildren() %}
+		{{ menuEntry(child) | raw }}
+		{% else %}
+		<li><a class="dropdown-item" href="#" data-cms-action-definition='{{ child.getActionDefinition() }}'
+				data-cms-i18n-key="{{ child.id }}">{{ child.name }}</a></li>
+		{% endif %}
 		{% endfor %}
 	</ul>
 </li>
 {% else %}
 <li class="nav-item">
-	<a class="nav-link" aria-current="page" href="#" data-cms-action-definition='{{ entry.getActionDefinition() }}' data-cms-i18n-key="{{ child.id }}">{{ entry.name }}</a>
+	<a class="nav-link" aria-current="page" href="#" data-cms-action-definition='{{ entry.getActionDefinition() }}'
+		data-cms-i18n-key="{{ child.id }}">{{ entry.name }}</a>
 </li>
 {% endif %}
 {% endmacro %}
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Manager</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Manager</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-		<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 
-		<link rel="stylesheet" href="/manager/css/manager.css" />
-		<script src="/manager/js/manager-globals.js"></script>
-		<script src="/manager/js/manager.js" type="module"></script>
-		<style>
-			html, body, #content {
-				height: 100%;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="menu">
-			<nav class="navbar navbar-expand-lg navbar-expand-md bg-light">
-				<div class="container-fluid">
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-							data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-							aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-							{% for entry in actionFactory.createMenu().entries() %}
-								{{ menuEntry(entry) | raw }}
-							{% endfor %}
-						</ul>
-						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-								aria-expanded="false" data-cms-i18n-key="language">
-									Language
-								</a>
-								<ul class="dropdown-menu">
-									<li>
-										<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="en" data-cms-i18n-key="language.en">English</a>
-									</li>
-									<li>
-										<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="de" data-cms-i18n-key="language.de">German</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+	<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+
+	<link rel="stylesheet" href="/manager/css/manager.css" />
+	<script src="/manager/js/manager-globals.js"></script>
+	<script src="/manager/js/manager.js" type="module"></script>
+	<style>
+		html,
+		body,
+		#content {
+			height: 100%;
+		}
+	</style>
+</head>
+
+<body>
+	<div id="menu">
+		<nav class="navbar navbar-expand-lg navbar-expand-md bg-light">
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						{% for entry in actionFactory.createMenu().entries() %}
+						{{ menuEntry(entry) | raw }}
+						{% endfor %}
+					</ul>
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 								aria-expanded="false" data-cms-i18n-key="menu.settings">
-									Settings
-								</a>
-								<ul class="dropdown-menu">
-									<li>
-										<a class="dropdown-item" id="cms-action-logout" href="/manager/logout" data-cms-i18n-lang="en" data-cms-i18n-key="menu.settings.logout">Logout</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+								Settings
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" id="cms-action-logout" href="/manager/logout"
+										data-cms-i18n-lang="en" data-cms-i18n-key="menu.settings.logout">Logout</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+								aria-expanded="false" data-cms-i18n-key="language">
+								Language
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="en"
+										data-cms-i18n-key="language.en">English</a>
+								</li>
+								<li>
+									<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="de"
+										data-cms-i18n-key="language.de">German</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-			</nav>
-		</div>
-		<div id="content" class="w-100 h-100">
-			<div class="position-relative w-100 h-100" id="previewWrapper">
-				<iframe id="contentPreview" class="w-100 h-100 border-0 position-absolute" src="/?preview=true" stylebla="position: absolute; height: 100%; width: 100%; border: none" ></iframe>
+			</div>
+		</nav>
+	</div>
+	<div id="content" class="w-100 h-100">
+		<div class="position-relative w-100 h-100" id="previewWrapper">
+			<iframe id="contentPreview" class="w-100 h-100 border-0 position-absolute" src="/?preview=true"
+				stylebla="position: absolute; height: 100%; width: 100%; border: none"></iframe>
 
-				  <!-- Overlay -->
-				<div id="previewOverlay"
-					class="position-absolute top-0 start-0 w-100 h-100 bg-white bg-opacity-75 align-items-center justify-content-center"
-					style="z-index: 10; display: none;">
-					<div class="spinner-border text-primary" role="status">
-						<span class="visually-hidden">Loading...</span>
-					</div>
+			<!-- Overlay -->
+			<div id="previewOverlay"
+				class="position-absolute top-0 start-0 w-100 h-100 bg-white bg-opacity-75 align-items-center justify-content-center"
+				style="z-index: 10; display: none;">
+				<div class="spinner-border text-primary" role="status">
+					<span class="visually-hidden">Loading...</span>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
-		<script src="/manager/js/ui-actions.js" type="module"></script>
+	<script src="/manager/js/ui-actions.js" type="module"></script>
 
-		<div id="modalContainer"></div>
-		<div id="sidebarContainer"></div>
-		<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
+	<div id="modalContainer"></div>
+	<div id="sidebarContainer"></div>
+	<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 	<ninja-keys> </ninja-keys>
 
 	<script>
 
-var shortCuts = [
-	{% for entry in actionFactory.createShortCuts() %}
-	{
-		id: '{{ entry.id }}',
-		title: '{{ entry.title }}',
-		hotkey: '{{ entry.hotkey }}',
-		icon: '{{ entry.icon }}',
-		section: '{{ entry.section }}',
-		handler: () => {
-			var action = {{ entry.getActionDefinition() | raw }}
-			if (action.type === "hook") {
-				executeHookAction(action)
-			} else if (action.type === "script") {
-				executeScriptAction(action)
-			}
+		var shortCuts = [
+			{% for entry in actionFactory.createShortCuts() %}
+		{
+			id: '{{ entry.id }}',
+				title: '{{ entry.title }}',
+					hotkey: '{{ entry.hotkey }}',
+						icon: '{{ entry.icon }}',
+							section: '{{ entry.section }}',
+								handler: () => {
+									var action = {{ entry.getActionDefinition() | raw
+								}
+		}
+		if (action.type === "hook") {
+			executeHookAction(action)
+		} else if (action.type === "script") {
+			executeScriptAction(action)
+		}
 		}
 	},
-	{% endfor %}
+		{% endfor %}
 ];
-const ninja = document.querySelector('ninja-keys');
-ninja.data = shortCuts;
+		const ninja = document.querySelector('ninja-keys');
+		ninja.data = shortCuts;
 	</script>
 </body>
+
 </html>
