--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -61,6 +61,7 @@
 
 	<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
 
+	<link rel="stylesheet" href="/manager/js/libs/cherry-markdown/cherry-markdown.css" />
 	<link rel="stylesheet" href="/manager/css/manager.css" />
 	<script src="/manager/js/manager-globals.js"></script>
 	<script src="/manager/js/manager.js" type="module"></script>
