refactoring forms, add markdown form field

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -61,7 +61,12 @@
 
 	<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
 
-	<link rel="stylesheet" href="/manager/js/libs/cherry-markdown/cherry-markdown.css" />
+	<script src="https://cdn.jsdelivr.net/npm/easymde@2.20.0/dist/easymde.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde@2.20.0/dist/easymde.min.css" />
+
+	<script src="https://cdn.jsdelivr.net/npm/cherry-markdown@0.9.3/dist/cherry-markdown.core.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cherry-markdown@0.9.3/dist/cherry-markdown.min.css">
+
 	<link rel="stylesheet" href="/manager/css/manager.css" />
 	<script src="/manager/js/manager-globals.js"></script>
 	<script src="/manager/js/manager.js" type="module"></script>
