more translations added

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -103,7 +103,7 @@
 							<ul class="dropdown-menu">
 								<li>
 									<a class="dropdown-item" id="cms-action-logout" href="/manager/logout"
-										data-cms-i18n-lang="en" data-cms-i18n-key="menu.settings.logout">Logout</a>
+										data-cms-i18n-key="menu.settings.logout">Logout</a>
 								</li>
 							</ul>
 						</li>
