--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -83,6 +83,7 @@
 	<div id="menu">
 		<nav class="navbar navbar-expand-lg navbar-expand-md bg-light">
 			<div class="container-fluid">
+				<span class="navbar-brand mb-0 h1">CondationCMS</span>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -96,9 +97,9 @@
 					</ul>
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-								aria-expanded="false" data-cms-i18n-key="menu.settings">
-								Settings
+							<a class="nav-link dropdown-toggle dropdown-nocaret" href="#" role="button" data-bs-toggle="dropdown"
+								aria-expanded="false" data-cms-i18n-key11="menu.settings">
+								<i class="bi bi-sliders2-vertical"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
