--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -87,7 +87,7 @@
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+					<span class="navbar-toggler-icon"></span><
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -125,7 +125,7 @@
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="btn btn-success dropdown-toggle dropdown-nocaret" href="#" 
+							<a class="btn dropdown-toggle dropdown-nocaret" href="#" 
 							data-bs-toggle="dropdown" aria-expanded="false"
 								id="cms-btn-status"
 								data-cms-i18n-key="menu.status"
@@ -133,7 +133,7 @@
 							</a>
 							<ul class="dropdown-menu dropdown-menu-end">
 								<li>
-									<a class="dropdown-item cms-lang-selector" href="#" data-cms-i18n-lang="en"
+									<a class="dropdown-item" href="#" data-cms-i18n-lang="en"
 										data-cms-i18n-key="menu.meta"
 										data-cms-action-definition='{"function":"runAction","module":"/manager/actions/page/edit-meta","parameters":{},"type":"script"}'
 										>Edit meta</a>
