--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -168,7 +168,7 @@
 
 	<div id="modalContainer"></div>
 	<div id="sidebarContainer"></div>
-	<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
+	<div id="toastContainer" class="toast-container position-fixed bottom-0 end-0 p-3"></div>
 
 	<ninja-keys> </ninja-keys>
 
