--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -55,9 +55,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Manager</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/manager/bootstrap/bootstrap-superhero.min.css" rel="stylesheet" />
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+	<link rel="stylesheet" href="/manager/bootstrap/bootstrap-icons.min.css" />
 
 	<script type="module" src="https://unpkg.com/ninja-keys?module"></script>
 
@@ -81,7 +81,7 @@
 
 <body>
 	<div id="menu">
-		<nav class="navbar navbar-expand-lg navbar-expand-md bg-light">
+		<nav class="navbar navbar-expand-lg navbar-expand-md bg-primary">
 			<div class="container-fluid">
 				<span class="navbar-brand mb-0 h1">CondationCMS</span>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -161,7 +161,7 @@
 		</div>
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/min/vs/loader.js"></script>
 
 	<script src="/manager/js/ui-actions.js" type="module"></script>
