--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -26,8 +26,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Manager</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+		<link href="/manager/bootstrap/bootstrap-superhero.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="/manager/bootstrap/bootstrap-icons.min.css" />
 
 		<style>
 			html,
@@ -62,20 +62,20 @@
 	<body class="d-flex align-items-center py-4 bg-body-tertiary">
 		<main class="form-signin w-100 m-auto">
 			<form action="/manager/login.action" method="POST" > <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-				<h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+				<h1 class="h3 mb-3 fw-normal text-dark">Please sign in</h1>
 				<div class="form-floating"> 
 					<input type="text" class="form-control" id="inputUsername" placeholder="username" name="username" /> 
-					<label for="inputUsername">Username</label>
+					<label for="inputUsername" class="text-dark">Username</label>
 				</div>
 				<div class="form-floating"> 
 					<input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password" />
-					<label for="inputPassword">Password</label> 
+					<label for="inputPassword" class="text-dark">Password</label> 
 				</div>
 				<button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
 			</form>
 		</main>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="/manager/bootstrap/bootstrap.bundle.min.js"></script>
 
 	</body>
 
