--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -61,8 +61,10 @@
 
 	<body class="d-flex align-items-center py-4 bg-body-tertiary">
 		<main class="form-signin w-100 m-auto">
-			<form action="/manager/login.action" method="POST" > <img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-				<h1 class="h3 mb-3 fw-normal text-dark">Please sign in</h1>
+			<h1 class="text-dark text-center">CondationCMS</h1>
+			<form action="/manager/login.action" method="POST" > 
+				<!--img class="mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57" -->
+				<h2 class="h3 mb-3 fw-normal text-dark">Please sign in</h2>
 				<div class="form-floating"> 
 					<input type="text" class="form-control" id="inputUsername" placeholder="username" name="username" /> 
 					<label for="inputUsername" class="text-dark">Username</label>
