add prefix if necessary add vars to manager scope

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -78,8 +78,12 @@
 		}
 	</style>
 	<script>
-		window.csrfToken = '{{ csrfToken }}';
-		window.managerBaseURL = "{{ managerBaseURL }}";
+
+		window.manager = {
+			csrfToken : '{{ csrfToken }}',
+			baseUrl : '{{ managerBaseURL }}',
+			contextPath: '{{ contextPath }}'
+		}
 	</script>
 </head>
 
