add media field, => not completly implemented

--- a/modules/ui-module/designs/field.media.html
+++ b/modules/ui-module/designs/field.media.html
@@ -53,10 +53,10 @@
 <body class="p-4">
 
   <div class="d-flex align-items-start cms-form-field">
-    <div class="cms-media-preview flex-shrink-0 me-3">
+    <div class="cms-media-preview flex-shrink-0-11 me-3">
       <img src="https://placehold.co/100x100" alt="Image preview">
     </div>
-    <div class="flex-grow-1">
+    <div class="flex-grow-1-11 d-flex flex-column">
       <label for="mediaInput" class="cms-drop-zone" onclick="document.getElementById('mediaInput').click()"
         ondragover="event.preventDefault()" ondrop="handleDrop(event)">
         <div><i class="bi bi-upload me-2"></i>Datei hierher ziehen oder klicken</div>
