add icons to editor

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -155,9 +155,9 @@
 							<ul class="dropdown-menu dropdown-menu-end">
 								<li>
 									<a class="dropdown-item" href="#" data-cms-i18n-lang="en"
-										data-cms-i18n-key="menu.meta"
-										data-cms-action-definition='{"function":"runAction","module":"{{ links.createUrl('/manager/actions/page/edit-meta') }}","parameters":{},"type":"script"}'
-										>Edit meta</a>
+										data-cms-i18n-key="menu.page.settings"
+										data-cms-action-definition='{"function":"runAction","module":"{{ links.createUrl('/manager/actions/page/edit-page-settings') }}","parameters":{},"type":"script"}'
+										>Page settings</a>
 								</li>
 							</ul>
 						</li>
