--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -93,9 +93,12 @@
 						<input type="text" class="form-control" id="inputCode" placeholder="Code" name="code" />
 						<label for="inputCode" class="text-dark">Code</label> 
 					</div>
-					<button class="btn btn-primary w-100 py-2" id="validateButton">Validate</button>
+					<button class="btn btn-primary w-100 py-2 mt-3" id="validateButton">Validate</button>
 				</div>
 				{% endif %}
+				<div id="loginMessage" class="alert mt-3" role="alert">
+					
+				</div>
 			</form>
 			<div>
 				<button class="btn btn-primary w-100 py-2 mt-3" id="resetButton">Reset</button>
