--- a/modules/ui-module/src/main/resources/manager/login.html
+++ b/modules/ui-module/src/main/resources/manager/login.html
@@ -95,14 +95,16 @@
 					</div>
 					<button class="btn btn-primary w-100 py-2 mt-3" id="validateButton">Validate</button>
 				</div>
-				{% endif %}
+				
 				<div id="loginMessage" class="alert mt-3" role="alert">
 					
 				</div>
 			</form>
-			<div>
-				<button class="btn btn-primary w-100 py-2 mt-3" id="resetButton">Reset</button>
-			</div>
+			{% if force2fa %}
+				<div>
+					<button class="btn btn-primary w-100 py-2 mt-3" id="resetButton">Reset</button>
+				</div>
+			{% endif %}
 			
 		</main>
 
