fix test project

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -153,7 +153,7 @@
 								</li>
 							</ul>
 						</li>
-						<li class="nav-item dropdown">
+						<!--li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle dropdown-nocaret" href="#" role="button"
 								data-bs-toggle="dropdown" aria-expanded="false" data-cms-i18n-key11="language"
 								title="Language">
@@ -169,7 +169,7 @@
 										data-cms-i18n-key="language.de">German</a>
 								</li>
 							</ul>
-						</li>
+						</li-->
 						<li class="nav-item dropdown">
 							<a class="btn dropdown-toggle dropdown-nocaret" href="#" data-bs-toggle="dropdown"
 								aria-expanded="false" id="cms-btn-status" data-cms-i18n-key="menu.status">Status
