--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -190,7 +190,7 @@
 	<div id="content" class="flex-grow-1 d-flex flex-column overflow-hidden">
 		<div id="previewWrapper" class="flex-grow-1 position-relative">
 			<iframe id="contentPreview" class="position-absolute top-0 start-0 w-100 h-100 border-0"
-				src="{{ links.createUrl('/?preview=true&preview-token=' + previewToken) }}"></iframe>
+				src="{{ links.createUrl('/?preview=true&preview-token=' + previewToken) | raw }}"></iframe>
 
 			<!-- Overlay -->
 			<div id="previewOverlay"
