switching sites fixed, prepare demo project for multilanguage implementation

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -82,7 +82,8 @@
 		window.manager = {
 			csrfToken: '{{ csrfToken }}',
 			baseUrl: '{{ managerBaseURL }}',
-			contextPath: '{{ contextPath }}'
+			contextPath: '{{ contextPath }}',
+			siteId: '{{ siteId }}',
 		}
 	</script>
 </head>
